--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,12 @@ find_package(fmt CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(Vulkan MODULE REQUIRED)
 find_package(SDL2 CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
 
 add_subdirectory(src)
+add_subdirectory(assets)
 add_subdirectory(external)
 
 add_executable(VulkanPlayground main.cpp)
 target_link_libraries(VulkanPlayground PRIVATE BaseEngine)
+add_dependencies(VulkanPlayground shaders)
