--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,17 @@
 add_library(AssetsManager OBJECT
         AssetsManager/ShaderModule.cpp
+        AssetsManager/TextureModule.cpp
+        AssetsManager/OneTimeCommand.cpp
         )
 target_link_libraries(AssetsManager
         fmt::fmt
         spdlog::spdlog
         glm::glm
+        vma
+        stb
+        )
+target_compile_definitions(AssetsManager PUBLIC
+        VULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1
         )
 
 add_library(BaseEngine OBJECT
@@ -13,16 +20,16 @@ add_library(BaseEngine OBJECT
         BaseEngine/ChosenGPU.cpp
         BaseEngine/Presenter.cpp
         BaseEngine/DefaultPipeline.cpp
-        BaseEngine/Scene.cpp
         )
 target_link_libraries(BaseEngine
         SDL2::SDL2
         fmt::fmt
         spdlog::spdlog
         vma
+        stb
         $<TARGET_OBJECTS:AssetsManager>
         )
-target_include_directories(BaseEngine PRIVATE
+target_include_directories(BaseEngine PUBLIC
         ${Vulkan_INCLUDE_DIRS}
         AssetsManager
         )
